# mcp-host-validate-test

./: MCP_DEVELOPMENT_GUIDE.md  package.json  pyproject.toml  tsconfig.json
app/controller/: mcp.controller.ts
src/McpServerTemplate/: open_platform_server.py
