[project]
name = "McpServerTemplate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=40.0",
    "mcp>=1.27.0",
    # 数据验证和设置管理
    "pydantic>=2.0.0",
    # 异步HTTP客户端
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages=["src/McpServerTemplate"]

[project.scripts]
McpServerTemplate = "McpServerTemplate:main"

[tool.uv]
dev-dependencies = [
    "cryptography>=40.0",
    "pytest>=8.3.3",
    "ruff>=0.7.3"
]
